File: plugins/nexus-repository-maven/src/main/java/org/sonatype/nexus/repository/maven/internal/content/MavenMetadataRebuilder.java